--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,4 @@
 # should be updated accordingly.
 
 # Prisma
-# https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://postgres:password@localhost:5432/valencia"
+DATABASE_URL="mongodb://user:password@host:port/database?directConnection=true"
