--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "@prisma/extension-accelerate": "^1.2.1",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@types/leaflet": "^1.9.14",
     "geist": "^1.3.0",
+    "leaflet": "^1.9.4",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
