--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "@prisma/extension-accelerate": "^1.2.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@types/leaflet": "^1.9.14",
+    "@types/leaflet.markercluster": "^1.5.5",
     "geist": "^1.3.0",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
+    "react-leaflet-markercluster": "^4.1.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
