--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/leaflet": "^1.9.14",
     "@types/leaflet.markercluster": "^1.5.5",
     "geist": "^1.3.0",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "next": "^15.0.1",
