--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.454.0",
     "next": "^15.0.1",
+    "next-intl": "^3.24.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
