--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,4 @@
 # should be updated accordingly.
 
 # Prisma
-DATABASE_URL="mongodb://user:password@host:port/database?directConnection=true"
+DATABASE_URL="posgres://user:password@host:port/database?directConnection=true"
